# groundit

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/groundit/: __init__.py
src/groundit/confidence/: confidence_extractor.py  get_confidence_scores.py  json_parser.py  logprobs_aggregators.py
src/groundit/reference/: add_source_spans.py  create_model_with_source.py  models.py
tests/: models.py  test_utils.py  utils.py
tests/confidence/: test_json_parser.py
tests/integration/: README.md  conftest.py  test_groundit.py
tests/integration/confidence/: test_llm_confidence.py  test_llm_integration.py
tests/integration/reference/: test_reference_module.py
tests/unit/: test_utils.py
tests/unit/confidence/: test_json_parser.py
tests/unit/reference/: test_create_model_with_source.py  test_source_model.py
