[project]
name = "groundit"
version = "0.1.0"
description = "Groundit adds source references and confidence scores to ensure your AI outputs are verifiable and trustworthy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.2.2", # for creating JSON syntax tree and converting leaves to scores
    "pydantic>=2.11.5",
    "rich>=14.0.0", # for pretty printing json data
]
license = "MIT"
authors = [
    { name="Sam Rodriguez" }
]
keywords = ["llm", "extraction", "confidence", "references", "audit"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "tiktoken>=0.9.0",
]

[tool.pytest.ini_options]
addopts = "-s"
